# crypto-microstructure-trader

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: REPLAY_ENGINE_EVALUATION.md  V2_2_REPLAY_LAB_SUMMARY.md  V2_2_STATUS.md
modules/event-simulation-core/: README.md  simulator.py
modules/event-simulation-core/replay/: __init__.py  event_store.py  latency_model.py  replay_validator.py
src/crypto_microstructure_trader/: __init__.py  __main__.py  cli.py  simulator.py
src/crypto_microstructure_trader/replay/: __init__.py  event_store.py  latency_model.py  replay_validator.py
tests/: conftest.py  test_cli.py  test_event_store.py  test_latency_model.py  test_legacy_compatibility.py  test_public_api.py  test_replay_validator.py  test_simulator.py
